<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="EdModel"
            type="com.gevcorst.stanleygodfreycvapp.viewModel.ResumeViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/AppTheme.cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/schoolName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/recyclerViewTextColor"
            app:layout_constraintEnd_toEndOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/schName"
            android:textColor="@color/recyclerViewTextColor"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/degree"
            android:textColor="@color/recyclerViewTextColor"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/schoolName" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/startDate"
            android:textColor="@color/recyclerViewTextColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/sdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sdate" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/endDate"
            android:textColor="@color/recyclerViewTextColor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/sdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:textColor="@color/recyclerViewTextColor"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/degreeAwarded" />

        <TextView
            android:id="@+id/degreeAwarded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textColor="@color/recyclerViewTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/standings"
            android:textColor="@color/recyclerViewTextColor"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateEnded" />

        <TextView
            android:id="@+id/stands"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textColor="@color/recyclerViewTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endDate" />

        <TextView
            android:id="@+id/dateEnded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="TextView"
            android:textColor="@color/recyclerViewTextColor"
            app:layout_constraintBottom_toBottomOf="@+id/textView20"
            app:layout_constraintStart_toEndOf="@+id/textView20"
            app:layout_constraintTop_toTopOf="@+id/textView20" />
    </androidx.constraintlayout.widget.ConstraintLayout>






</layout>